--- a/5-objects/_objects.buttons.scss
+++ b/5-objects/_objects.buttons.scss
@@ -80,4 +80,15 @@ $ico-margin:       .9em;
 
 
 
+
 /* ===== LINKS ============================================================== */
+
+// .link {}
+
+    /** Link outside of the site with `ico ext-link`. */
+    .link--external {
+        &:after {
+            @include iconify( inline, $ico-code-ext-link );
+            margin-left: .25em;
+        }
+    }
