--- a/3-generic/_generic.resets.scss
+++ b/3-generic/_generic.resets.scss
@@ -4,9 +4,15 @@
 
 
 * {
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 ul, ol {
     list-style: none;
+}
+
+address{
+    font-style: inherit;
+    display: inline;
 }
